--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <!-- font-family: 'Inter', sans-serif; -->
-    <link rel="stylesheet" href="../mealify/css/all.min.css">
-    <link rel="stylesheet" href="../mealify/css/style.css">
-    <link rel="stylesheet" href="../mealify/css/media.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
     <title>mealify</title>
 </head>
